[package]
name = "totup"
version = "0.1.0"
authors = ["Gilbert Röhrbein <gilbert@ifsr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
grep = "0.2.7"
ignore = "0.4.17"
internment = "0.4.1"
prettytable-rs = "0.8.0"
structopt = "0.3.21"
term_size = "0.3.2"
termcolor = "1.1.2"

[features]
record-terms = []
